# WASA-RawAnalysis

./: .gitmodules  CMakeLists.txt  README.md  rawanalysis.cpp
Reactions/: analyses.h  central.cpp  central.h  elastic.cpp  elastic.h  forward.cpp  forward.h  forward_pd.cpp  preselection.cpp  quasielastic.cpp
Reconstruction/: forward.cpp  forward.h
Simulation/: runpluto.cpp  runpluto.h  sim-6gamma.cpp  sim-elastic.cpp  sim-forward.cpp
Simulation-advanced/: bound.cpp  bound.h  runsim.cpp  runsim.h  sim-b-2gamma.cpp  sim-b-6gamma.cpp  sim-bound.cpp  sim-eta-gg.cpp  sim-eta-gggggg.cpp  sim-pd.cpp  sim-ppn.cpp  sim-test.cpp
Sorting/: main.cpp
scripts/: AnalysisAll.sh  RunAnalysis-Reconstruction.sh  RunAnalysis-data.sh  RunAnalysis-mc-quick.sh  RunAnalysis-mc.sh  RunClear.sh  RunPreselectedAnalysis.sh  RunPreselection.sh  RunWMC.sh  pack-wasa-data.sh  repack-wasa-data.sh  runs_count.sh
